--- a/style.css
+++ b/style.css
@@ -1,6 +1,16 @@
-
 body {
     font-family: Arial, sans-serif;
     text-align: center;
     margin-top: 50px;
+}
+
+#gameResult {
+    margin-top: 20px;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+#finalMessage {
+    margin-top: 30px;
+    color: red;
 }
